Menambahkan style dll

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>My Portfolio</title>
 </head>
 <body>
-    Under Development
+    <div class="bgimg-1">
+        <div class="caption">
+          <span class="border">Under Maintenance</span>
+        </div>
+    </div>
 </body>
 </html>
